--- a/_conclusion.tex
+++ b/_conclusion.tex
@@ -1,4 +1,4 @@
-We presented a unifying software framework to solve traffic assignment problems based on a VI formulation. The software is not built to fit any particular traffic model; rather it has a modular design, which enables to simulate various traffic assignment problems. The two main modules, the model manager and the solver, provide interfaces to integrate different traffic models and numerical methods respectively. To demonstrate the software use, we conducted numerical experiments that compare equilibrium assignment resulting from three traffic models implemented in the framework: the static model, the MN model and the CTM model. The equilibrium assignments were calculated with one of the three numerical algorithms included: the Frank-Wolfe algorithm, the method of successive averages, and extra-projection method. Results showed that, as expected, the equilibrium assignments from the MN and CTM dynamic models account for the traffic evolution better than the static model, which has no concept of queue formation on links. We also observed that the CTM model simulated congestion more accurately than MN, since it enables flow spill-back from links to upstream links as congestion grows.
+We have presented a unifying software framework to solve traffic assignment problems based on a VI formulation. The software is not built to fit any particular traffic model; rather it has a modular design, which enables the solution and comparison of a range of traffic assignment problems. The two main modules, the model manager and the solver, provide interfaces to integrate different traffic models and numerical methods respectively. To demonstrate the software use, we conducted numerical experiments that compare equilibrium assignment resulting from three traffic models implemented in the framework: the static model, the MN model and the CTM model. The equilibrium assignments were calculated with one of the three numerical algorithms included: the Frank-Wolfe algorithm, the Method of Successive Averages, and Extra Projection Method. Results showed that, as expected, the equilibrium assignments from the MN and CTM dynamic models account for the traffic evolution better than the static model, which has no concept of queue formation on links. We also observed that the CTM model simulated congestion more accurately than MN, since it enables flow spill-back from links to upstream links as congestion grows.
 
-In our future research, we will extend our framework for multiple commodities models to represent multiple driver classes such app-routed and non-routed drivers. In addition, we observed that the equilibrium computation time increased significantly (up to 12 hours) as the traffic network size grew to urban-scale networks. Hence, we plan to exploit distributed computation in high performance computing environments to speed up equilibrium calculations. This will enable the use of the framework for large-scale traffic assignment problems and real-time traffic operations. 
+In our future research, we will extend our framework for multiple commodities models to represent multiple driver classes such as app-routed and non-routed drivers. In addition, we observed that as the traffic network size grew to large-scale networks (a network with more than 2500 nodes and 2500 origin-destination nodes), the equilibrium computation time increased significantly (13 hours). Hence, we plan to continue exploiting distributed computation in HPC to speed up equilibrium calculations. This will enable the use of the framework for urban-scale traffic assignment problems and real-time traffic operations. 
 
