--- a/citation.bib
+++ b/citation.bib
@@ -1,4 +1,15 @@
 
+
+@article{peeta,
+  title={Foundations of Dynamic Traffic Assignment: The past, the present and the future.},
+  author={Peeta, Srinivas and Ziliaskopoulos, Athanasios},
+  journal={Networks and Spatial Economics},
+  volume={1},
+  pages={233-265},
+  year={2001},
+  publisher={Kluwer Academic Publishers, Netherlands.}
+}
+
 @article{rootlocus,
   title={Root Locus Technique},
   author={Kuo, Benjamin C.},
@@ -217,6 +228,14 @@
   publisher={INFORMS}
 }
 
+@misc{beats,
+  author = {Gomes, Gabriel},
+  title = {{BeATS: Berkeley Advanced Traffic Simulation}},
+  howpublished = "\url{https://bitbucket.org/gcgomes/beats-sim}",
+  year = {2018}, 
+%   note = "[Online; accessed 16-April-2018]"
+}
+
 @misc{ta_solver,
   author = {Ugirumurera, Juliette and Gomes, Gabriel},
   title = {{ta\_solver}},
@@ -227,9 +246,9 @@
 
 @misc{ wiki_Route_Choice,
   author = {Fundamentals of Transportation/Route Choice},
-  title = {{Fundamentals of Transportation/Route Choice --- {W}ikipedia{,} The Free Encyclopedia}},
+  title = {{Fundamentals of Transportation/Route Choice --- {W}ikipedia},
   year = {2010},
-  howpublished = "\url{https://en.wikibooks.org/wiki/Fundamentals_of_Transportation/Route_Choice},
+%   howpublished="\url{https://en.wikibooks.org/wiki/Fundamentals_of_Transportation/Route_Choice}",
   note = "[Online; accessed 18-April-2018]"
 }
 
@@ -294,9 +313,9 @@
 }
 
 @inproceedings{thai2016negative,
-  title={Negative externalities of GPS-enabled routing applications: A game theoretical approach},
+  title={Negative externalities of {GPS}-enabled routing applications: A game theoretical approach},
   author={Thai, J{\'e}r{\^o}me and Laurent-Brouty, Nicolas and Bayen, Alexandre M},
-  booktitle={Intelligent Transportation Systems (ITSC), 2016 IEEE 19th International Conference on},
+  booktitle={2016 IEEE ITSC},
   pages={595--601},
   year={2016},
   organization={IEEE}
