--- a/main.tex
+++ b/main.tex
@@ -1,21 +1,22 @@
 \documentclass[conference]{IEEEtran}
 \usepackage{todonotes}
+\usepackage[capitalise,nameinlink]{cleveref}
 \input{_defines}
 
 \begin{document}
 
-\title{A unified software framework for solving traffic assignment\\
+\title{A unified software framework for solving traffic assignment problems\\
 %{\footnotesize \textsuperscript}
 \thanks{This work is supported in part by the Office of Science of the
  U.S.~Department of Energy under contract No.~DE-AC02-05CH11231.}
 }
-
+ 
 \author{\IEEEauthorblockN{Juliette Ugirumurera\IEEEauthorrefmark{1}, Gabriel Gomes\IEEEauthorrefmark{2},
-Emily Porter\IEEEauthorrefmark{3}, Xiaoye S. Li\IEEEauthorrefmark{1}, and Alexandre Bayen\IEEEauthorrefmark{2}\IEEEauthorrefmark{4}}\\
-\IEEEauthorblockA{\IEEEauthorrefmark{1}Computational Research Division,Lawrence Berkeley Nationa Lab}
+Emily Porter\IEEEauthorrefmark{3}, Xiaoye S. Li\IEEEauthorrefmark{1}, and Alexandre Bayen\IEEEauthorrefmark{2}\IEEEauthorrefmark{4}\IEEEauthorrefmark{3}}\\
+\IEEEauthorblockA{\IEEEauthorrefmark{1}Computational Research Division, Lawrence Berkeley Nationa Lab}
 \IEEEauthorblockA{\IEEEauthorrefmark{2} Institute of Transportation Studies, University of California at Berkeley}
-\IEEEauthorblockA{\IEEEauthorrefmark{3}Department of Civil and Environmental Engineering,University of California at Berkeley}
-\IEEEauthorblockA{\IEEEauthorrefmark{4}Department of Electrical Engineering and Computer Science,University of California at Berkeley}}
+\IEEEauthorblockA{\IEEEauthorrefmark{3}Department of Civil and Environmental Engineering, University of California at Berkeley}
+\IEEEauthorblockA{\IEEEauthorrefmark{4}Department of Electrical Engineering and Computer Science, University of California at Berkeley}}
 
 \maketitle
 
@@ -55,10 +56,8 @@ Emily Porter\IEEEauthorrefmark{3}, Xiaoye S. Li\IEEEauthorrefmark{1}, and Alexan
 \label{sec:conclusions}
 \input{_conclusion.tex}
 
-\section*{Acknowledgment}
 
-
-\bibliographystyle{unsrt}
+\bibliographystyle{IEEEtran}
 \bibliography{citation.bib}
 
 
