--- a/_abstract.tex
+++ b/_abstract.tex
@@ -1,1 +1,5 @@
-In transportation planning, determining the allocation of origin-destination trips to paths in a transportation network to meet some equilibrium properties is known as the traffic assignment problem. This paper presents a general variational inequality formulation that unifies traffic assignment problems. From this formulation, we develop a modular and extensible software framework. The framework does not require a specific traffic model, unlike most existing traffic assignment software tools. Rather, our software framework serves as a platform to explore different static and dynamic models and traffic assignment solution algorithms. It currently supports three different traffic models: a static model and two dynamic models, the cell-based model and the Merchant-Nemhauser model. It also includes the Frank-Wolfe algorithm, the Extra Projection method, and the method of successive averages to solve the traffic assignment problems. The performance of the software is demonstrated with numerical results. 
+We describe a software framework for solving user equilibrium traffic assignment problems. The design is based on the formulation of the problem as a variational inequality. The software implements these as well as several numerical methods for find equilirbria. We compare the solutions obtained under several models: static, Merchant-Nemhauser, `CTM with instantaneous travel time', and `CTM with actual travel time'. Some important differences are demonstrated. 
+
+
+
+%In transportation planning, determining the allocation of origin-destination trips on a network's paths to meet some equilibrium properties is known as the traffic assignment problem. This paper presents a general variational inequality formulation that unifies traffic assignment problems. From this formulation, we develop a modular and extensible software framework. The framework does not require a specific traffic model, unlike most existing traffic assignment software tools. Rather, our software framework serves as a platform to explore different traffic models and traffic assignment solution algorithms. It currently supports three different traffic models: a static model and two dynamic models: the cell-transmission model and the Merchant-Nemhauser model. It also includes the Frank-Wolfe algorithm, the Extra Projection Method, and the Method of Successive Averages to solve the traffic assignment problems. The performance of the software is demonstrated with numerical results. 
